package configuration;

import interfaces.IConfiguration;

public class Configuration implements IConfiguration{

    @Override
    public void loadConfiguration() {

    }

    @Override
    public String getConfigurationSection() {
        return null;
    }

    @Override
    public void selectConfigurationSection() {

    }

    @Override
    public String getItem(String key) {
        return null;
    }

    @Override
    public void setItem(String key) {

    }
}
