package uimap;

import interfaces.IUiMap;
import org.openqa.selenium.By;
import org.openqa.selenium.WebDriver;
import org.openqa.selenium.WebElement;

import java.util.List;

public class UiMap implements IUiMap {

    private WebDriver driver;

    public UiMap(){}

    public UiMap(WebDriver driver)
    {
        this.driver = driver;
    }

    @Override
    public List<WebElement> getElements(String xPath)
    {
        return driver.findElements(By.xpath(xPath));
    }

    @Override
    public WebElement getElement(String xPath)
    {
        return driver.findElement(By.xpath(xPath));
    }

    @Override
    public void click(WebElement element)
    {
        String elementType = element.getAttribute("type");
        switch (elementType)
        {
            case "submit":
            case "button":
                element.click();
                break;

            case "select":
            case "dropdown":
                //TO DO
                break;

            default:
                element.click();
                break;
        }
    }

    @Override
    public void inputData(WebElement element, String value)
    {
        element.sendKeys(value);
    }
}
