@startuml
IUiMap ..> UiMap

class UiMap {
-WebDriver _driver
+UiMap(WebDriver driver)
+List<WebElement> getElements()
+WebElement getElement()
+click(String xPath)
+inputData(WebElement element, String xPath)
}

class DriverFactory {
-WebDriver driver
-String browser
-DriverFactory(String browser)
-WebDriver driverInitialize()
+WebDriver getBrowser()
+setDriver(WebDriver driver)
}

IConfiguration ..> Configuration
class Configuration{
+loadConfiguration()
+String getConfigurationSection()
+selectConfigurationSection()
+String getItem(String key)
+setItem(String key)
}


com.atf.LoginTest "1" o-- "1" DriverFactory

class Constants {
+{static}String DRIVERS_DIRECTORY
+{static}String PATH_TO_DRIVERS
+{static}String CHROME_DRIVER_DIRECTORY
+{static}String IE_DRIVER_DIRECTORY
+{static}String FIREFOX_DRIVER_DIRECTORY
+{static}String SYSTEM_UNDERTEST
+{static}String BROWSER
}

class com.atf.LoginTest{
+WebDriver driver
+String browserForTest
+LoginPageObject loginPage
+UiMap uiMap
+setUp()
+tearDown()
--
Others test methods
}

UiMap -->  com.atf.LoginTest
Constants --> com.atf.LoginTest
Constants --> DriverFactory
@enduml